@@ -1,3 +1,4 @@
 add_subdirectory(Training)
 add_subdirectory(Challenge)
 add_subdirectory(Scenario)
+add_subdirectory(Campaign)
