@@ -1,0 +1,2 @@
+add_subdirectory(A_Classic_Fairytale)
+add_subdirectory(A_Space_Adventure)
